# CLAII

./: .claii_memory.json  .gitignore  README.md  main.py  pyproject.toml  tests.py
calculator/: main.py  tests.py
calculator/pkg/: calculator.py  render.py
claii/: agent.py  cli.py  config.py  memory.py  providers.py
claii/providers/: base.py  google_genai.py
functions/: config.py  get_file_content.py  get_files_info.py  get_kb_file.py  run_python.py  write_file.py
